--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
     <!-- Vendor CSS Files -->
     <link
-      href="assets/vendor/bootstrap/css/bootstrap.min.css"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
     />
     <link
@@ -40,7 +40,7 @@
 
     <!-- Vendor JS Files -->
     <script
-      src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
       defer
     ></script>
     <script
