--- a/pages/user_list.html
+++ b/pages/user_list.html
@@ -85,11 +85,11 @@
 
     <main id="main" class="main">
       <div class="pagetitle">
-        <h1>Dashboard</h1>
+        <h1>User</h1>
         <nav>
           <ol class="breadcrumb">
             <li class="breadcrumb-item"><a href="index.html">Home</a></li>
-            <li class="breadcrumb-item active">Dashboard</li>
+            <li class="breadcrumb-item active">User</li>
           </ol>
         </nav>
       </div>
@@ -221,7 +221,7 @@
       ><i class="bi bi-arrow-up-short"></i
     ></a>
 
-    <!-- Modal Tambah User -->
+    <!-- Modal Add User -->
     <div
       class="modal fade"
       id="inputUserModal"
@@ -321,6 +321,40 @@
               <button type="submit" class="btn btn-primary">Tambah</button>
             </div>
           </form>
+        </div>
+      </div>
+    </div>
+
+    <!-- Modal Delete User -->
+    <div
+      class="modal fade"
+      id="deleteUserModal"
+      tabindex="-1"
+      aria-labelledby="exampleModalLabel"
+      aria-hidden="true"
+    >
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h1 class="modal-title fs-5 fw-normal" id="exampleModalLabel">
+              Hapus User
+            </h1>
+            <button
+              type="button"
+              class="btn-close"
+              data-bs-dismiss="modal"
+              aria-label="Close"
+            ></button>
+          </div>
+          <div class="modal-body"></div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-gray" data-bs-dismiss="modal">
+              Tutup
+            </button>
+            <button type="button" class="btn btn-danger btn-delete">
+              Hapus
+            </button>
+          </div>
         </div>
       </div>
     </div>
