--- a/pages/user_list.html
+++ b/pages/user_list.html
@@ -47,7 +47,7 @@
     <script src="../assets/js/main.js" defer></script>
 
     <!-- Custom JS -->
-    <script src="../assets/js/index.js" defer></script>
+    <script type="module" src="../assets/js/index.js" defer></script>
 
     <!-- API Calls -->
     <script src="../utils/user.js" defer></script>
@@ -423,7 +423,7 @@
               >
                 Tutup
               </button>
-              <button type="submit" class="btn btn-primary">Tambah</button>
+              <button type="submit" class="btn btn-primary">Simpan</button>
             </div>
           </form>
         </div>
