--- a/pages/user_list.html
+++ b/pages/user_list.html
@@ -47,10 +47,10 @@
     <script src="../assets/js/main.js" defer></script>
 
     <!-- Custom JS -->
-    <script type="module" src="../assets/js/index.js" defer></script>
+    <script src="../assets/js/index.js" defer></script>
 
     <!-- API Calls -->
-    <script src="../utils/user.js" defer></script>
+    <script type="module" src="../utils/user.js" defer></script>
 
     <!-- =======================================================
   * Template Name: NiceAdmin - v2.4.1
