add cabang sama driver

--- a/pages/driver_list.html
+++ b/pages/driver_list.html
@@ -169,7 +169,7 @@
                     </div>
 
                     <table
-                      class="table table-responsive table-borderless table-user align-middle"
+                      class="table table-responsive table-borderless table-driver align-middle"
                     >
                       <thead>
                         <tr>
@@ -188,7 +188,7 @@
                   </div>
                 </div>
               </div>
-              <!-- End Recent Sales -->
+              <!-- End Table -->
             </div>
           </div>
           <!-- End Left side columns -->
