add role total api

--- a/pages/user_list.html
+++ b/pages/user_list.html
@@ -93,7 +93,7 @@
           <div class="col-lg-12">
             <div class="row">
               <!-- Card -->
-              <div class="col-sm">
+              <div class="col-sm card-client">
                 <div class="card info-card revenue-card">
                   <div class="card-body">
                     <h5 class="card-title">Klien</h5>
