--- a/pages/user_list.html
+++ b/pages/user_list.html
@@ -92,71 +92,55 @@
           <!-- Left side columns -->
           <div class="col-lg-12">
             <div class="row">
-              <!-- Card -->
-              <div class="col-sm card-client">
-                <div class="card info-card revenue-card">
-                  <div class="card-body">
-                    <h5 class="card-title">Klien</h5>
+              <div class="row card-info">
+                <!-- Card -->
 
-                    <div class="d-flex align-items-center">
-                      <div
-                        class="card-icon bg-gray rounded d-flex align-items-center justify-content-center"
-                      >
-                        <iconify-icon icon="mdi:user"></iconify-icon>
-                      </div>
-                      <div class="ps-3">
-                        <h6>2.8k</h6>
-                        <span class="text-muted small">Pengguna</span>
+                <!-- End Card -->
+
+                <!-- Card -->
+                <div class="col-sm">
+                  <div class="card info-card revenue-card">
+                    <div class="card-body">
+                      <h5 class="card-title">Driver</h5>
+
+                      <div class="d-flex align-items-center">
+                        <div
+                          class="card-icon bg-gray rounded d-flex align-items-center justify-content-center"
+                        >
+                          <iconify-icon icon="mdi:user"></iconify-icon>
+                        </div>
+                        <div class="ps-3">
+                          <h6>27</h6>
+                          <span class="text-muted small">Pengguna</span>
+                        </div>
                       </div>
                     </div>
                   </div>
                 </div>
-              </div>
-              <!-- End Card -->
+                <!-- End Card -->
 
-              <!-- Card -->
-              <div class="col-sm">
-                <div class="card info-card revenue-card">
-                  <div class="card-body">
-                    <h5 class="card-title">Driver</h5>
+                <!-- Card -->
+                <div class="col-sm">
+                  <div class="card info-card revenue-card">
+                    <div class="card-body">
+                      <h5 class="card-title">Admin</h5>
 
-                    <div class="d-flex align-items-center">
-                      <div
-                        class="card-icon bg-gray rounded d-flex align-items-center justify-content-center"
-                      >
-                        <iconify-icon icon="mdi:user"></iconify-icon>
-                      </div>
-                      <div class="ps-3">
-                        <h6>27</h6>
-                        <span class="text-muted small">Pengguna</span>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <!-- End Card -->
-
-              <!-- Card -->
-              <div class="col-sm">
-                <div class="card info-card revenue-card">
-                  <div class="card-body">
-                    <h5 class="card-title">Admin</h5>
-
-                    <div class="d-flex align-items-center">
-                      <div
-                        class="card-icon bg-gray rounded d-flex align-items-center justify-content-center"
-                      >
-                        <iconify-icon icon="mdi:user"></iconify-icon>
-                      </div>
-                      <div class="ps-3">
-                        <h6>3</h6>
-                        <span class="text-muted small">Pengguna</span>
+                      <div class="d-flex align-items-center">
+                        <div
+                          class="card-icon bg-gray rounded d-flex align-items-center justify-content-center"
+                        >
+                          <iconify-icon icon="mdi:user"></iconify-icon>
+                        </div>
+                        <div class="ps-3">
+                          <h6>3</h6>
+                          <span class="text-muted small">Pengguna</span>
+                        </div>
                       </div>
                     </div>
                   </div>
                 </div>
+                <!-- End Card -->
               </div>
-              <!-- End Card -->
 
               <!-- Tabel User -->
               <div class="col-12">
